--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Neonderthaw&family=Raleway:ital,wght@0,400;0,500;1,400;1,500&display=swap');
+body{
+  margin: 0;
+  padding: 0%;
+  background-color: white;
+}
+.App
+{
+  border: solid 1px lightslategray;
+  margin-top: 0;
+  width: 90vw;
   text-align: center;
+  background-color:lightslategray;
+  min-height:100vh;
+  margin: auto;
+}
+.todo-task{
+  width: 50%;
+}
+.todoform{
+  padding: 2rem;
+}
+.todoform input{
+  height: 4.5vh;
+}
+.btn
+{
+  height: 5vh;
+  margin-left: 2px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todo-row{
   display: flex;
-  flex-direction: column;
+  width: 80%;
+  margin: auto;
+  justify-content: space-between;
+  height:7vh;
+  background-color:yellow ;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  transition: 350ms;
+  margin-top: 3px;
+
+}
+.todo-task
+{
+  padding-left: 2rem;
+}
+.icons{
+  padding-right: 1rem;
+  display: flex;
+  justify-content: space-between;
+  width: 15%;
+}
+.completed{
+  text-decoration-line:line-through;
+  opacity: 0.7;
+  background-color: rgb(175, 116, 92);
+  transition: 350ms;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (min-width:720px) {
+  .App{
+    width: 70%;
+    margin: auto;
+    background-color: #112c4d;
+    border-radius: 5%;
   }
-  to {
-    transform: rotate(360deg);
+  body{
+    background-color:#0d1a2d;
+  }
+  h1
+  {
+    color: #00afef;
+  }
+  .todoform input{
+    width: 60%;
+  }
+  .btn
+  {
+    width: 20%;
+    height: 5.2vh;
+  }
+}
+
+@media screen and (min-width:860px)
+{
+  .App{
+    width: 50%;
+    margin: auto;
+    background-color: #112c4d;
+    border-radius: 5%;
   }
 }
