--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,wght@0,700;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Neonderthaw&family=Raleway:ital,wght@0,400;0,500;1,400;1,500&display=swap');
 body{
   margin: 0;
   padding: 0%;
   background-color: white;
+  font-family: 'Source Serif 4',sans-serif;
 }
 .App
 {
@@ -63,23 +65,39 @@ body{
   .App{
     width: 70%;
     margin: auto;
-    background-color: #112c4d;
+    background-color: #1eebdac5;
     border-radius: 5%;
   }
   body{
     background-color:#0d1a2d;
   }
+  .todo-row
+  {
+    background-color:black;
+    border-radius: 20px;
+    color: gold;
+  }
   h1
   {
-    color: #00afef;
+    color:gold;
   }
   .todoform input{
     width: 60%;
+    background-color: gold;
+    border: none;
+    color:darkred;
+    height: 6vh;
   }
   .btn
   {
     width: 20%;
     height: 5.2vh;
+    color: gold;
+    background-color: black;
+    border: none;
+  }
+  .icons{
+    color: gold;
   }
 }
 
@@ -88,7 +106,7 @@ body{
   .App{
     width: 50%;
     margin: auto;
-    background-color: #112c4d;
+    background-color:#1eebdac5 ;
     border-radius: 5%;
   }
 }
